syntax = "proto3";
package proto;
option go_package = ".;proto";

// Message sent by a site connector to a coordinator with the registration request of a site algo.
message SiteRegReq { // Site Registration Request
                         int32 site_id = 1;
                         string site_ip_port = 2;
}

// Message sent by a coordinator to a site connector indicating whether the algorithm registration was successful.
message SiteRegRes { // Site Algorithm Registration Response
                         bool success = 1;
                         string msg = 2;
}