syntax = "proto3";
package proto;
option go_package=".;proto";

import "proto/computation-msgs.proto";
import "proto/availability-msgs.proto";
import "proto/selector-verification-msgs.proto";

// To compile the protobuf to Go run the following inside the protoBuf folder:
// protoc -I=. --go_out=plugins=grpc:.  site-algos.proto

// To compile the protobuf to Python run the following inside the protoBuf folder:
// python -m grpc_tools.protoc -I=. --python_out=. --grpc_python_out=. site-algos.proto


// RPC service at a site algo that performs the necessary computation.
service SiteAlgo {

    // Performs the appropriate computation at the host algo and returns the result.
    rpc Map (MapRequest) returns (MapResponse) {}

    // Pinged by the site-connector to determine whether the site-algo is on
    rpc SiteAvailable (SiteAvailableReq) returns (SiteAvailableRes) {}

    // Perfroms verification on the selector and returns a success
    rpc VerifySelector (SelectorVerificationReq) returns (SelectorVerificationRes) {}

}